[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# [profile.dev]  //this linking thing bevy said to do was the reason it was working in his ex but not here!!!!
# opt-level = 1

# [profile.dev.package."*"]
# opt-level = 2

# [features]
# wasm-bindgen = ["instant/wasm-bindgen", "ggrs/wasm-bindgen"]

[dependencies]
#bevy = { version = "0.7", default-features = false } //this leads to not finidng literally everything ughhh like Color!!
bevy = "0.7"
bytemuck = { version = "1.7", features=["derive"]}
instant = "0.1"
log = "0.4"
ggrs = { git = "https://github.com/gschup/ggrs", features=["sync-send"]}
bevy_ggrs = {git = "https://github.com/gschup/bevy_ggrs"}
structopt = "0.3"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0"
bevy_render = "0.7.0"
bevy_pbr = "0.7.0"

